RU_Foody First Commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="RUFoody">RUFoody</string>
     <string name="order_now">Order Now</string>
     <string name="signup">SignUp</string>
-    <string name="sua">Signup As</string>
+    <string name="sua">Connect As</string>
     <string name="sign_in">SignIn</string>
     <string name="sign_with_email">Login with Email</string>
     <string name="sign_with_phone">Login with Phone</string>
