RU_Foody Authentication
Signed-off-by: Abayo <eabayo@konza.ke>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="eotp">Enter The OTP</string>
     <string name="verify">Verify</string>
     <string name="resend">Resend the Code</string>
-    <string name="Otp">------</string>
+    <string name="Otp">Enter The OTP</string>
 
 
 </resources>
