--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,14 @@
     <string name="description">Description</string>
     <string name="image_upload">image upload</string>
 
+    <string name="uploading">Uploading...</string>
+
+
+
+
+
+
+
     <string-array name="DishName">
         <item>Thepla</item>
         <item>Dal Rice</item>
